--- a/style.css
+++ b/style.css
@@ -10,9 +10,24 @@ License URI: license.txt
 Tags:
 */
 
+body {
+	font-family: Arial, "MS Trebuchet", sans-serif;
+	font-size: 15px;
+	line-height: 24px;
+}
+
 * {
 	margin: 0;
 	padding: 0;
+}
+
+a {
+	color: #000;
+	text-decoration: underline;
+}
+
+p {
+	margin-bottom: 24px;
 }
 
 #wrapper {
@@ -20,11 +35,64 @@ Tags:
 	margin: 0 auto;
 }
 
+#header {
+	width: 100%;
+	margin-top: 100px;
+}
+
+#header hgroup #title {
+	display: inline;
+	font-size: 39px;
+	line-height: 39px;
+}
+
+#header hgroup #title a {
+	text-decoration: none;
+	font-weight: normal;
+}
+
+#header hgroup #description {
+	display: inline;
+	font-weight: normal;
+	font-size: 24px;
+	margin-left: 24px;
+}
+
+#header nav {
+	font-size: 18px;
+	line-height: 38px;
+}
+
+#header nav ul {
+	width: 100%;
+	margin-top: 50px;
+	margin-bottom: 50px;
+	border-top: 1px #000 solid;
+	border-bottom: 1px #000 solid;
+	list-style: none;
+	text-align: left;
+}
+
+#header nav ul li {
+	display: inline;
+}
+
+#header nav ul li a {
+	padding: 9px;
+	text-decoration: none;
+}
+
+#header nav ul li a:hover {
+	background-color: #eee;
+}
+
 article {
 	width: 100%;
+	float: left;
 }
 
 article header.entry-header {
+	margin: 50px 0 24px 0;
 	width: 100%;
 }
 
@@ -32,11 +100,26 @@ article header.entry-header h1.entry-title {
 	display: inline;
 }
 
+article header.entry-header h1.entry-title a {
+	font-size: 24px;
+	color: #000;
+	font-weight: normal;
+	text-decoration: none;
+}
+
 article header.entry-header .entry-meta {
 	display: inline;
 }
 
 article .entry-content, article aside.entry-thumbnail {
-	width: 50%;
 	float: left;
+}
+
+article .entry-content {
+	width: 400px;
+	margin: 0 50px 0 0;
+}
+
+article article aside.entry-thumbnail {
+	width: 450px;
 }
