--- a/style.css
+++ b/style.css
@@ -10,10 +10,14 @@ License URI: license.txt
 Tags:
 */
 
+html {
+	background-color: #fff;
+}
+
 body {
 	font-family: Arial, "MS Trebuchet", sans-serif;
 	font-size: 15px;
-	line-height: 24px;
+	line-height: 25px;
 }
 
 * {
@@ -27,7 +31,7 @@ a {
 }
 
 p {
-	margin-bottom: 24px;
+	margin-bottom: 25px;
 }
 
 #wrapper {
@@ -36,48 +40,44 @@ p {
 }
 
 #header {
+	float: left;
 	width: 100%;
 	margin-top: 100px;
+	margin-bottom: 100px;
+}
+
+#header a {
+	text-decoration: none;
 }
 
 #header hgroup #title {
 	display: inline;
 	font-size: 39px;
 	line-height: 39px;
-}
-
-#header hgroup #title a {
-	text-decoration: none;
 	font-weight: normal;
 }
 
 #header hgroup #description {
 	display: inline;
 	font-weight: normal;
-	font-size: 24px;
-	margin-left: 24px;
-}
-
-#header nav {
-	font-size: 18px;
-	line-height: 38px;
+	font-size: 25px;
+	margin-left: 15px;
 }
 
 #header nav ul {
-	width: 100%;
+	height: 36px;
 	margin-top: 50px;
-	margin-bottom: 50px;
 	border-top: 1px #000 solid;
 	border-bottom: 1px #000 solid;
 	list-style: none;
-	text-align: left;
-}
-
-#header nav ul li {
-	display: inline;
+	font-size: 18px;
+	line-height: 18px;
+	display: block;
 }
 
 #header nav ul li a {
+	display: block;
+	float: left;
 	padding: 9px;
 	text-decoration: none;
 }
@@ -86,28 +86,41 @@ p {
 	background-color: #eee;
 }
 
+#content {
+	float: left;
+	width: 100%;
+}
+
 article {
 	width: 100%;
 	float: left;
+	padding-bottom: 25px;
+	margin-bottom: 50px;
+	border-bottom: 1px #000 solid;
+}
+
+article:last-child {
+	border-bottom: none;
 }
 
 article header.entry-header {
-	margin: 50px 0 24px 0;
+	margin-bottom: 25px;
 	width: 100%;
 }
 
 article header.entry-header h1.entry-title {
 	display: inline;
+	font-weight: normal;
+	font-size: 25px;
 }
 
 article header.entry-header h1.entry-title a {
-	font-size: 24px;
 	color: #000;
-	font-weight: normal;
 	text-decoration: none;
 }
 
 article header.entry-header .entry-meta {
+	margin-left: 9px;
 	display: inline;
 }
 
@@ -117,9 +130,25 @@ article .entry-content, article aside.entry-thumbnail {
 
 article .entry-content {
 	width: 400px;
-	margin: 0 50px 0 0;
+	margin-right: 50px;
 }
 
-article article aside.entry-thumbnail {
+article aside.entry-thumbnail {
 	width: 450px;
+	padding-bottom: 25px;
+}
+
+#nav-below {
+	display: block;
+	float: left;
+	width: 100%;
+	margin-bottom: 50px;
+}
+
+#nav-below .nav-previous {
+	float: left;
+}
+
+#nav-below .nav-next {
+	float: right;
 }
