--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: Klaus Gerhorst
 Theme URI:
 Author: Luis Gerhorst
 Author URI: http://luisgerhorst.de/
-Description: Theme created for Klaus Gerhorst's website <a href="http://klausgerhorst.de/">klausgerhorst.de</a>, based on <a href="http://wordpress.org/extend/themes/toolbox">Toolbox</a> theme version 1.4 by <a href="http://automattic.com/">Automattic</a>.
+Description: Theme created for Klaus Gerhorst's website <a href="http://klausgerhorst.de/">klausgerhorst.de</a>, based on <a href="http://wordpress.org/extend/themes/toolbox">Toolbox</a> version 1.4 by <a href="http://automattic.com/">Automattic</a>.
 Version: 1.0
 License: GNU General Public License
 License URI: license.txt
@@ -91,7 +91,7 @@ p {
 	width: 100%;
 }
 
-article {
+#entries article {
 	width: 100%;
 	float: left;
 	padding-bottom: 25px;
@@ -99,41 +99,42 @@ article {
 	border-bottom: 1px #000 solid;
 }
 
-article:last-child {
+#entries article:last-child {
 	border-bottom: none;
+	margin-bottom: 0;
 }
 
-article header.entry-header {
+#entries article header.entry-header {
 	margin-bottom: 25px;
 	width: 100%;
 }
 
-article header.entry-header h1.entry-title {
+#entries article header.entry-header h1.entry-title {
 	display: inline;
 	font-weight: normal;
 	font-size: 25px;
 }
 
-article header.entry-header h1.entry-title a {
+#entries article header.entry-header h1.entry-title a {
 	color: #000;
 	text-decoration: none;
 }
 
-article header.entry-header .entry-meta {
+#entries article header.entry-header .entry-meta {
 	margin-left: 9px;
 	display: inline;
 }
 
-article .entry-content, article aside.entry-thumbnail {
+#entries article .entry-content, article aside.entry-thumbnail {
 	float: left;
 }
 
-article .entry-content {
+#entries article .entry-content {
 	width: 400px;
 	margin-right: 50px;
 }
 
-article aside.entry-thumbnail {
+#entries article aside.entry-thumbnail {
 	width: 450px;
 	padding-bottom: 25px;
 }
