renamed theme to Teletype

--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 /*
-Theme Name: Klaus Gerhorst
-Theme URI:
+Theme Name: Teletype
+Theme URI: http://github.com/luisgerhorst/teletype
 Author: Luis Gerhorst
 Author URI: http://luisgerhorst.de/
-Description: Theme created for Klaus Gerhorst's website <a href="http://klausgerhorst.de/">klausgerhorst.de</a>, based on <a href="http://wordpress.org/extend/themes/toolbox">Toolbox</a> version 1.4 by <a href="http://automattic.com/">Automattic</a>.
+Description: Simple, black on white theme created for Klaus Gerhorst's website <a href="http://klausgerhorst.de/">klausgerhorst.de</a>, based on <a href="http://wordpress.org/extend/themes/toolbox">Toolbox</a> version 1.4 by <a href="http://automattic.com/">Automattic</a>.
 Version: 1.0
 License: GNU General Public License
-License URI: license.txt
-Tags:
+License URI: LICENSE.txt
+Tags: black, white, images, text, simple, arial, html5
 */
 
 html {
