--- a/style.css
+++ b/style.css
@@ -153,3 +153,34 @@ p {
 #nav-below .nav-next {
 	float: right;
 }
+
+footer {
+	width: 100%;
+	float: left;
+	margin-bottom: 50px;
+}
+
+footer, footer a {
+	font-size: 15px;
+	line-height: 15px;
+}
+
+footer p {
+	margin-bottom: 0;
+	text-align: left;
+	display: block;
+	float: left;
+}
+
+footer ul {
+	display: block;
+	float: left;
+	text-align: right;
+	list-style: none;
+}
+
+footer ul li {
+	display: block;
+	float: right;
+	margin-left: 15px;
+}
