--- a/style.css
+++ b/style.css
@@ -65,10 +65,9 @@ p {
 }
 
 #header nav ul {
-	height: 36px;
+	height: 38px;
 	margin-top: 50px;
-	border-top: 1px #000 solid;
-	border-bottom: 1px #000 solid;
+	box-shadow: inset 0 1px #000, inset 0 -1px #000;
 	list-style: none;
 	font-size: 18px;
 	line-height: 18px;
@@ -78,16 +77,17 @@ p {
 #header nav ul li a {
 	display: block;
 	float: left;
-	padding: 9px;
+	padding: 10px;
 	text-decoration: none;
 }
 
-#header nav ul:hover li.current-menu-item a {
-	background: #fff;
+#header nav ul li a, #header nav ul:hover li.current-menu-item a {
+	background: none;
 }
 
-#header nav ul li a:hover, #header nav ul li.current-menu-item a, #header nav ul:hover li.current-menu-item a:hover {
+#header nav ul li:hover a, #header nav ul li.current-menu-item a, #header nav ul:hover li.current-menu-item:hover a {
 	background-color: #eee;
+	box-shadow: inset 0 1px #000, inset 0 -1px #000;
 }
 
 #content {
