--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ p {
 }
 
 #header nav ul li:hover a, #header nav ul li.current-menu-item a, #header nav ul:hover li.current-menu-item:hover a {
-	background-color: #eee;
+	background-color: #f3f3f3;
 	box-shadow: inset 0 1px #000, inset 0 -1px #000;
 }
 
