--- a/style.css
+++ b/style.css
@@ -85,11 +85,21 @@ p {
 
 #header nav ul li a, #header nav ul:hover li.current-menu-item a {
 	background: none;
+	transition: all 0.1s linear 0;
+	-webkit-transition: all 0.1s linear 0;
+	-moz-transition: all 0.1s linear 0;
+	-ms-transition: all 0.1s linear 0;
+	-o-transition: all 0.1s linear 0;
 }
 
 #header nav ul li:hover a, #header nav ul li.current-menu-item a, #header nav ul:hover li.current-menu-item:hover a {
 	background-color: #f3f3f3;
 	box-shadow: inset 0 1px #b3b3b3, inset 0 -1px #b3b3b3;
+	transition: all 0.1s linear 0;
+	-webkit-transition: all 0.1s linear 0;
+	-moz-transition: all 0.1s linear 0;
+	-ms-transition: all 0.1s linear 0;
+	-o-transition: all 0.1s linear 0;
 }
 
 #content {
