--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ Tags: black, white, images, text, simple, arial, html5
 
 #html-logo:hover {
 	background: #f9f9f9;
-	color: #333;
+	color: #292929;
 	transition: all 0.1s linear 0;
 	-webkit-transition: all 0.1s linear 0;
 	-moz-transition: all 0.1s linear 0;
@@ -111,7 +111,8 @@ p {
 #header nav ul {
 	height: 38px;
 	margin-top: 50px;
-	box-shadow: inset 0 1px #bbb, inset 0 -1px #bbb;
+	border-top: 1px #bbb solid;
+	border-bottom: 1px #bbb solid;
 	list-style: none;
 	font-size: 18px;
 	line-height: 18px;
@@ -136,7 +137,7 @@ p {
 
 #header nav ul li:hover a, #header nav ul li.current-menu-item a, #header nav ul:hover li.current-menu-item:hover a {
 	background-color: #f3f3f3;
-	box-shadow: inset 0 1px #b3b3b3, inset 0 -1px #b3b3b3;
+	box-shadow: 0 1px #b3b3b3, 0 -1px #b3b3b3;
 	transition: all 0.1s linear 0;
 	-webkit-transition: all 0.1s linear 0;
 	-moz-transition: all 0.1s linear 0;
